--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .idea
-data
-processed_data
+# data
+# processed_data
 
+!data/.gitkeep
+!processed_data/.gitkeep
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
