--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-.idea
-data
-processed_data
+# pycharm IDE files
+.idea/
 
+# Data files
+data/
+processed_data/
 !data/.gitkeep
 !processed_data/.gitkeep
+
+# tensorflow runs dir
+runs/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
